<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntuitiveBook</string>
    <string name="hello_world">Hello world!</string>
	<string name="firstname"></string>
	<string name="lastname"></string>
	<string name="Phone"></string>
	<string name="Cell"></string>
	<string name="Email"></string>
	<string name="addphone"> + </string>
    <string name="addcell"> + </string>
    <string name="addemail"> + </string>
    <string name="contactName"> FirstName LastName </string>
    <string name="contactPhone"> Phone </string>
    <string name="contactCell"> Cell </string>
    <string name="contactEmail"> Email </string>
    <string name="CallButton"> CallButton </string>
    <string name="submitButton"> Submit </string>
    <string name="addUser"> Add </string>
    <string name="emergency"> 911 </string>
    <string name="removeUser"> Remove </string>
    <string name="selectMultiple"> Select(ions) </string>
    <string name="deleteSelected"> Delete </string>
    <string name="deleteCheckbox"></string>
    <string name="deleteName"></string>
    <string name="deletePhone"></string>
    <string name="deleteCell"></string>
    <string name="deleteEmail"></string>
    <string name="back"> Go Back </string>
    <string name="viewContacts"> View Contacts </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteContact"> You sure you want to delete this Contact?</string>
    <string name="action_settings"> Settings </string>
    <string name="smstext"/>
    <string name="smsbutton"> Send </string>
    <string name="editcontact"> Edit </string>
    <string name="groupsms">Group Text</string>
    <string name="smsSelected"> Send Message </string>
    <string name="makeGroup"> Create Group</string>
</resources>
