<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/lastname" />

	<EditText
	    android:id="@+id/editText3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editText5"
	    android:layout_below="@+id/editText5"
	    android:ems="10"
	    android:inputType="textEmailAddress"
	    android:text="@string/Email" >
	</EditText>

	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="30dp"
	    android:ems="10"
	    android:inputType="text"
	    android:text="@string/firstname" >
	</EditText>

	<EditText
	    android:id="@+id/editText4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editText2"
	    android:layout_below="@+id/editText2"
	    android:layout_marginTop="30dp"
	    android:ems="10"
	    android:inputType="phone"
	    android:text="@string/Phone" />

	<EditText
	    android:id="@+id/editText5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editText4"
	    android:layout_below="@+id/editText4"
	    android:ems="10"
	    android:inputType="phone"
	    android:text="@string/Cell" />

	<Button
	    android:id="@+id/button1"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/editText3"
	    android:layout_below="@+id/editText3"
	    android:layout_marginRight="75dp"
	    android:layout_marginTop="46dp"
	    android:text="@string/editcontact" />

</RelativeLayout>
