<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/removeUser" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/addUser" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2">
    </ListView>
 	<TextView
	  	android:id="@+id/emptyList"
	  	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#FFFFFF"
		android:textStyle="italic"
		android:layout_gravity="center_vertical|center_horizontal"		
		android:layout_margin="14dip"
		android:visibility="gone"
		/>

 	<Button
 	    android:id="@+id/button3"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentTop="true"
 	    android:layout_centerHorizontal="true"
 	    android:text="@string/emergency" />

</RelativeLayout>
